src/main/java/com/example/timski/model/errors/InvalidUsernameOrPassword.java
package com.example.timski.model.errors;

public class InvalidUsernameOrPassword extends RuntimeException {


}
